feat: added check-in endpoint
